@@ -307,9 +307,9 @@ BEGIN
     EDITTEXT        IDC_3D_STEREO_MS,304,58,36,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "ZPD",IDC_STATIC,266,73,50,10
     EDITTEXT        IDC_3D_STEREO_ZPD,304,71,36,12,ES_RIGHT | ES_AUTOHSCROLL
-    CONTROL         "Dynamic AO",IDC_AO_ALL_TABLES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,54,10
-    LTEXT           "Visual Nudge Strength",IDC_STATIC,162,97,100,10
-    EDITTEXT        IDC_NUDGE_STRENGTH,246,95,36,12,ES_RIGHT | ES_AUTOHSCROLL
+    CONTROL         "Dynamic AO",IDC_DYNAMIC_AO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,71,54,10
+    LTEXT           "Visual Nudge Strength",IDC_STATIC,235,102,74,10
+    EDITTEXT        IDC_NUDGE_STRENGTH,307,100,36,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "FPS limiter/VSync",IDC_STATIC,162,126,100,10
     EDITTEXT        IDC_ADAPTIVE_VSYNC,246,124,20,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "Max prerendered frames",IDC_STATIC,162,138,77,8
@@ -341,9 +341,10 @@ BEGIN
     EDITTEXT        IDC_CORRECTION_X,39,251,35,12,ES_AUTOHSCROLL
     LTEXT           "Y",IDC_STATIC,85,252,8,8
     EDITTEXT        IDC_CORRECTION_Y,93,251,35,12,ES_AUTOHSCROLL
-    CONTROL         "Use NVIDIA API",IDC_USE_NVIDIA_API_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,70,68,10
-    GROUPBOX        "Ambient Occlusion",IDC_STATIC,154,49,103,40
-    LTEXT           "(NVIDIA cards only)",IDC_STATIC,170,78,63,8
+    CONTROL         "Use NVIDIA API",IDC_USE_NVIDIA_API_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,83,68,10
+    GROUPBOX        "Ambient Occlusion",IDC_STATIC,154,49,103,51
+    LTEXT           "(NVIDIA cards only)",IDC_STATIC,170,91,63,8
+    CONTROL         "Disable",IDC_DISABLE_AO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,39,10
 END
 
 IDD_FONTDIALOG DIALOG 0, 0, 316, 167
